Alignment issue for place order button in checkout page

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
@@ -700,7 +700,7 @@
  
 }
 
-.make_payment.button{
+#netbanking .make_payment.button{
  float:right; 
 }
 .address-list.showItem .edit{
